--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,8 @@ body{
     padding: 10px;
     background-color: #f7f7f7;
     height: 50px;
+    margin: 15px;
+    width: 100%;
   }
 
   #details{
@@ -46,7 +48,27 @@ body{
     margin-top: 50px;
   }
 
-  
+  #descrip1, #descrip2{
+    padding: 10px;
+    display: none;
+  }
+
+  #social{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 20%;
+  } 
+
+  i{
+    margin-left: 8px;
+    transition: color 0.6s ease-out;
+  }
+
+  i:hover{
+    color: orangered;
+  }
+ 
   .row{
     margin-left: 5px;
     margin-right: 5px;
@@ -63,34 +85,28 @@ body{
     margin-bottom: 18px;
 
   }
-  
 
-  
-  #name1, #position1, #alias1, #bio1 {
-    text-align: center;
-  }
-  
-  #name2, #position2, #alias2, #bio2 {
-    text-align: center;
-  }
-  
-  #name3, #position3, #alias3, #bio3 {
-    text-align: center;
-  }
-  
-  .name, .position, .alias, .profile{
-    text-align: center;
-  }
-  
-  #name7, #position7, #alias7, #bio7 {
-    text-align: center;
-  }
-  
-  #name8, #position8, #alias8, #bio8, #aliasBox {
-    text-align: center;
-  }
-  
-  #name9, #position9, #alias9, #bio9 {
-    text-align: center;
-  }
+.brand{
+  text-align: center;
+}
 
+#name1, #name2, #name3, #name4, #name5, #name6, #name6, #name7, #name8, #name9{
+  text-align: center;
+}
+
+#price1, #price2, #price3, #price4, #price5, #price6, #price7, #price8, #price9{
+  text-align: center;
+}
+
+
+#price4:before{
+  content: '¥'
+}
+
+#price5:before{
+  content: '$'
+}
+
+#price8:before{
+  content: '฿'
+}
